Chore: "추가 netlify"
- 배포를 위한 netlify 설치 및 설정

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "live-server --port=3000"
+    "start": "live-server --port=3000",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,5 @@
   "bugs": {
     "url": "https://github.com/hill0ne/crew-a-la-mode/issues"
   },
-  "homepage": "https://github.com/hill0ne/crew-a-la-mode#readme"
+  "homepage": "https://github.com/hill0ne/crew-a-la-mode"
 }
